Refactor code for UnitTest
