# backend/docs/swagger.yaml
@@ -149,6 +149,10 @@ paths:
       produces:
       - application/json
       responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/friend.BlockUserOutput'
         "201":
           description: Created
           schema:
@@ -176,8 +180,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/friend.GetCommonFriendsOutput'
         "400":
@@ -203,8 +207,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/friend.GetFriendsOutput'
         "400":
@@ -230,8 +234,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/friend.GetRecipientsOutput'
         "400":
@@ -257,6 +261,10 @@ paths:
       produces:
       - application/json
       responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/friend.MakeFriendOutput'
         "201":
           description: Created
           schema:
@@ -284,6 +292,10 @@ paths:
       produces:
       - application/json
       responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/friend.SubscribeUserOutput'
         "201":
           description: Created
           schema:
